Udacity Intro iOS

--- a/LaunchImagePicker/Info.plist
+++ b/LaunchImagePicker/Info.plist
@@ -34,5 +34,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Can this app use your photo library?</string>
 </dict>
 </plist>
